# aeroknite-genai-rag

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  VERSION  pyproject.toml
.github/workflows/: ci.yml
infra/: .env.compose.example  docker-compose.yml
libs/rag-core/: README.md  pyproject.toml
libs/rag-core/rag_core/: __init__.py  config.py
libs/rag-core/rag_core/grading/: __init__.py  deterministic.py  interfaces.py
libs/rag-core/rag_core/retrieval/: __init__.py  filters.py  reranker.py  retriever.py
libs/rag-core/rag_core/schemas/: __init__.py  models.py
libs/rag-core/rag_core/stores/: __init__.py  migrations.py  pgvector_store.py
libs/rag-core/rag_core/utils/: __init__.py  ids.py  retry.py  telemetry.py  text.py
libs/rag-core/tests/: conftest.py
libs/rag-core/tests/integration/: __init__.py  test_pgvector_schema_init.py  test_similarity_search_contract.py
libs/rag-core/tests/unit/: test_filters.py  test_placeholder_3.py  test_retry.py  test_schema_models.py  test_text_utils.py
scripts/: wait-for-deps.sh
services/ingestion-worker/: .dockerignore  Dockerfile
services/ingestion-worker/app/: main.py
services/ingestion-worker/ingestion_worker/: main.py
services/ingestion-worker/tests/integration/: test_worker_boot.py
services/ingestion-worker/tests/unit/: test_placeholder_2.py
services/query-service/: .dockerignore  Dockerfile
services/query-service/app/: main.py
services/query-service/query_service/: main.py
services/query-service/tests/integration/: test_health_ready.py
services/query-service/tests/unit/: test_placeholder_1.py
