[project]
name = "aeroknite-genai-rag"
version = "0.1.0"
requires-python = ">=3.12"

# Core runtime dependencies for your RAG system
dependencies = [
    "psycopg[binary]",
    "pgvector",
    "fastapi",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "ruff==0.15.0",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["services", "libs"]
markers = [
  "unit: fast unit tests",
  "integration: tests requiring external services (postgres/redis)",
]
filterwarnings = [
  "default",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
