[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core"
version = "0.1.0"
description = "Shared RAG primitives for Aeroknite GenAI system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Aeroknite", email = "dev@aeroknite.example"},
]
license = {text = "MIT"}

dependencies = [
    # Database
    "psycopg[binary]>=3.1.0",        # Postgres adapter (psycopg3)
    "pgvector>=0.2.0",                # pgvector Python client

    # Validation
    "pydantic>=2.0.0",                # Data validation
    "pydantic-settings>=2.0.0",       # Settings management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "psycopg[binary]>=3.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

# LLM dependencies (Stage 5+)
llm = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Postgres)",
]
